More of dem punctiation fixings.

--- a/po/da.po
+++ b/po/da.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-11 22:37+0100\n"
-"PO-Revision-Date: 2005-02-16 23:50+0100\n"
+"PO-Revision-Date: 2005-02-17 00:46+0100\n"
 "Last-Translator: Morten Bo Johansen <mojo@mbjnet.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -2632,7 +2632,7 @@ msgstr ""
 "Hvordan fejl håndteres når søgning ikke matcher:\n"
 "0 betyder at intet sker\n"
 "1 betyder at der gives et \"bip\"\n"
-"2 betyder at en påmindelse popper op."
+"2 betyder at en påmindelse popper op"
 
 #: src/config/options.inc:404
 msgid "Typeahead searching"
@@ -3333,7 +3333,7 @@ msgstr ""
 "Aktivér I/O i UTF-8 på Unicode-terminaler. Bemærk at i\n"
 "øjeblikket bruges kun den del af UTF-8 tegntabellen som\n"
 "svarer til de tegn der er indeholdt i terminalens\n"
-"tegnkodningstabel"
+"tegnkodningstabel."
 
 #: src/config/options.inc:765 src/dialogs/options.c:196
 msgid "Restrict frames in cp850/852"
@@ -5074,7 +5074,7 @@ msgstr ""
 "Når indstillingen er aktiveret indlæses og importeres alle eksternt\n"
 "refererede stilark fra enten CSS-dokumenter når @import anvendes eller\n"
 "fra HTML-dokumenter i forbindelse med <link> elementer i hovedet af\n"
-"dokumentet"
+"dokumentet."
 
 #: src/document/css/css.c:43
 msgid "Default style sheet"
