--- a/po/fr.po
+++ b/po/fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ELinks 0.10.CVS\n"
-"POT-Creation-Date: 2005-02-17 11:14+0100\n"
-"PO-Revision-Date: 2005-02-17 11:15+0100\n"
+"POT-Creation-Date: 2005-02-17 18:34+0100\n"
+"PO-Revision-Date: 2005-02-17 18:36+0100\n"
 "Last-Translator: Laurent Monin <zas@norz.org>\n"
 "Language-Team: French <zas@norz.org>\n"
 "MIME-Version: 1.0\n"
@@ -778,7 +778,7 @@ msgstr ""
 msgid "Print formatted plain-text versions of given URLs to stdout."
 msgstr ""
 "Imprimer les versions plein texte formatées des URLs données sur la \n"
-"sortie standard"
+"sortie standard."
 
 #: src/config/cmdline.c:657
 msgid "Codepage to use with -dump"
@@ -3346,7 +3346,7 @@ msgid ""
 msgstr ""
 "Restreindre les caractères utilisés pour dessiner les lignes.\n"
 "N'a du sens que pour les terminaux linux utilisant les jeux de\n"
-"caractères cp850/852"
+"caractères cp850/852."
 
 #: src/config/options.inc:770 src/dialogs/options.c:197
 msgid "Block cursor"
@@ -3361,7 +3361,7 @@ msgstr ""
 "Déplacer le curseur dans le coin inférieur droit.\n"
 "Cela est particulièrement utilise lorsque un curseur\n"
 "en forme de bloc est utilisé, ainsi le texte inversé\n"
-"est affiché correctement"
+"est affiché correctement."
 
 #: src/config/options.inc:776
 msgid "Color mode"
@@ -3407,7 +3407,7 @@ msgid ""
 msgstr ""
 "Jeu de caractères utilisé pour afficher les contenus dans le terminal.\n"
 "'System' signifie que le jeu de caractères sera déterminé par la locale\n"
-"sélectionnée"
+"sélectionnée."
 
 #. Keep options in alphabetical order.
 #: src/config/options.inc:805
