--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,67 @@
+Sun Feb 20 23:04:37 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ecmascript/spidermonkey.c:
+
+	Try to add support for history.go(...) borrowing code from the
+	history menuing.  
+
+Sun Feb 20 22:45:05 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/ecmascript/spidermonkey.c:
+
+	Use go_unback() and idea from history_back() to implement
+	history.forward().  
+
+Sun Feb 20 22:29:24 2005  Laurent Monin <zas@norz.org>:
+
+	* test/ecmascript/history.html:
+
+	Add javascript history test file.  
+
+Sun Feb 20 21:48:37 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/parse.c:
+
+	A truer translation of Czechlish 'a special care' is 'special care', 
+	not 'a special case'.  
+
+Sun Feb 20 21:41:14 2005  Miciah Dashiel Butler Masters <miciah@myrealbox.com>:
+
+	* src/document/html/parser/parse.c:
+
+	Nicen up the comments in struct element_info.  
+
+Sun Feb 20 20:24:50 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/ecmascript/spidermonkey.c:
+
+	onClick="history.back" special treatment's comment.  
+
+Sun Feb 20 20:07:24 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/ecmascript/spidermonkey.c:
+
+	It's strange, but it must be so.  
+
+Sun Feb 20 19:52:18 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* src/ecmascript/spidermonkey.c:
+
+	Yeah! 
+
+Sun Feb 20 00:33:43 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/document/html/parser/parse.c:
+
+	Apparently the attribute string can be removed from under us (when
+	accessing google news) so check before applying CSS the second time.  
+
+Sun Feb 20 00:12:02 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/protocol/file/file.c:
+
+	Add a <base href="cwd" /> element to the generate directory listing.  
+
 Sat Feb 19 21:51:00 2005  Jonas Fonseca <fonseca@diku.dk>:
 
 	* src/document/html/parser/parse.c:
